apps/smart-review/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-review-backend
  namespace: smart-review
  labels:
    app: smart-review-backend
spec:
  selector:
    matchLabels:
      app: smart-review-backend
  template:
    metadata:
      labels:
        app: smart-review-backend
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: smart-review-backend
          image: "registry.felipecisotto.com.br/smart-review-backend:1.0.1"
          livenessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 9
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
      restartPolicy: Always
---
